--- a/docs/ui/src/css/pagination.css
+++ b/docs/ui/src/css/pagination.css
@@ -23,7 +23,7 @@ nav.pagination .next {
 }
 
 nav.pagination span::before {
-  color: var(--toolbar-muted-color);
+  color: var(--color-white-50);
   font-size: 0.75em;
   padding-bottom: 0.1em;
 }
@@ -37,6 +37,7 @@ nav.pagination .next::before {
 }
 
 nav.pagination a {
+  color: var(--color-white);
   font-weight: var(--body-font-weight-bold);
   line-height: 1.3;
   position: relative;
@@ -44,7 +45,7 @@ nav.pagination a {
 
 nav.pagination a::before,
 nav.pagination a::after {
-  color: var(--toolbar-muted-color);
+  color: var(--color-white-50);
   font-weight: normal;
   font-size: 1.5em;
   line-height: 0.75;
